# core

./: .flake8  README.md  auto_start.py  db.sqlite3  main.py  pyproject.toml
api/: serializers.py  urls.py  views.py
core/: celery.py  settings.py  urls.py
myapp/: admin.py  tasks.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_rename_telegram_id_telegramuser_chat_id_and_more.py  0003_delete_telegramuser.py
telebot/: models.py  urls.py  views.py
telebot/migrations/: 0001_initial.py
templates/: dashboard.html  login.html  register.html
