[project]
name = "applications"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.3",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "psycopg>=3.2.9",
    "python-decouple>=3.8",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "supervisor>=4.2.5",
    "urllib3>=2.4.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "mypy>=1.16.0",
]
